--- a/static/main.html
+++ b/static/main.html
@@ -33,7 +33,7 @@
     <div class="container" id="chatContainer">
         <div class="container" id="upperChatContainer">
             <img class="upperChatPFP" src="/avatars/commonAvatar.png">
-            <span id="upperChatTitle">Мама</span>
+            <span id="upperChatTitle"></span>
         </div>
         <div class="mainChatContainer">
             <div id="messageContainer">
